--- a/templates/files1.html
+++ b/templates/files1.html
@@ -4,6 +4,7 @@
 	<title>File Handling</title>
 </head>
 <body>
+	{{msg}}
 <form action="/upload" method="POST" enctype="multipart/form-data">
 	<input type="file" name="file" / >
 	<select name = "ear">
