--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -6,11 +6,12 @@
 	body > #bg{
 	height: 100%;
 	width: 100%;
-	background: rgb(255,231,0);
-background: linear-gradient(217deg, rgba(255,231,0,1) 0%, rgba(255,165,0,1) 38%, rgba(255,231,0,1) 100%);
-	clip-path: polygon(100% 0, 100% 23%, 0 23%, 0 0);
+	background: #37517E;
+	clip-path: polygon(0 0, 100% 0%, 100% 46%, 0 79%);
+
 	position: absolute;
 	z-index: -1;
+	box-shadow: 0px 0px 0.8px 0 rgba(0, 0, 0, 0.4), 0 6px 20px 0 rgba(0, 0, 0, 0.9);
 }
 	.logo img{
 		width:80%;
