--- a/templates/subjects.html
+++ b/templates/subjects.html
@@ -44,14 +44,14 @@ body > #bg{
     <a class="nav-link" href="/" style="color: white;">Home</a>
   </li>
   <li class="nav-item">
-    <a class="nav-link" href="/firebase" style="color:white;">Mid Marks</a>
+    <a class="nav-link" href="/checkmarks" style="color:white;">Mid Marks</a>
   </li>
   <li class="nav-item">
     <button type="button" class="btn btn-primary" style = "box-shadow: -8px -8px 8px 0 rgba(0, 0, 0, 0.4), 0 6px 20px 0 rgba(0, 0, 0, 0.19); border: 0px solid black; background-color: #0D6EFD; color: white;border-radius: 50px;">
                <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-graph-up" viewBox="0 0 16 16">
   <path fill-rule="evenodd" d="M0 0h1v15h15v1H0V0zm10 3.5a.5.5 0 0 1 .5-.5h4a.5.5 0 0 1 .5.5v4a.5.5 0 0 1-1 0V4.9l-3.613 4.417a.5.5 0 0 1-.74.037L7.06 6.767l-3.656 5.027a.5.5 0 0 1-.808-.588l4-5.5a.5.5 0 0 1 .758-.06l2.609 2.61L13.445 4H10.5a.5.5 0 0 1-.5-.5z"/>
 </svg>
-                <a href = "/test1" style="color: white;text-decoration: none;">Tests</a>
+                <a href = "/dashboard" style="color: white;text-decoration: none;">DashBoard</a>
               </button>
   </li>
   
