--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Radio Buttons</title>
+	<title>Dash Board</title>
 	<style type="text/css">
 	body > #bg{
 	height: 100%;
