--- a/templates/feescheck.html
+++ b/templates/feescheck.html
@@ -6,6 +6,7 @@
 <body>
 	<center>
 <form action="/fee" method = 'POST'>
+		<input type="hidden" name="regno" value="{{regno}}">
 	<select name = 'sem'>
 		<option>1st year</option>
 		<option>2nd year</option>
