--- a/templates/adminpage.html
+++ b/templates/adminpage.html
@@ -74,6 +74,12 @@ background: linear-gradient(217deg, rgba(255,231,0,1) 0%, rgba(255,165,0,1) 38%,
 <td width="50%">
 		<div class="nav justify-content-center">
 <button type="button" class="btn btn-primary" style="width: 100px;margin: 30px;" onclick="document.location='/selectattendence'">Upload Attendence</button></div></td></tr>
+<tr>
+<td width="50%">
+		<div class="nav justify-content-center">
+<button type="button" class="btn btn-primary" style="width: 100px;margin: 30px;"onclick="document.location='/updatefees'">Update Fees</button></div></td></div>
+<td width="50%">
+		</td></tr>
 
 </div></tr>
 	</table></body></html>
