--- a/templates/userlogin.html
+++ b/templates/userlogin.html
@@ -76,6 +76,7 @@ span.psw {
   </div>
 
   <div class="container">
+    <h5>{{msg}}</h5>
     <label for="uname"><b>Register No</b></label>
     <input type="text" placeholder="Enter Regd.No" name="regno" required>
 
