--- a/templates/userregister.html
+++ b/templates/userregister.html
@@ -76,7 +76,7 @@ span.psw {
   </div>
 
   <div class="container">
-    <h5>{{msg}}</h5>
+    <h5>{{msg}}</h5><br>
     <label for="uname"><b>Register No</b></label>
     <input type="text" placeholder="Enter Regd.No" name="regno" required>
 
