--- a/templates/feescheck.html
+++ b/templates/feescheck.html
@@ -2,19 +2,70 @@
 <html>
 <head>
 	<title>Fees Details</title>
+	 <link rel="stylesheet" href="https://cdn.jsdelivr.net/chartist.js/latest/chartist.min.css">
+    <script src="https://cdn.jsdelivr.net/chartist.js/latest/chartist.min.js"></script>
+
+    <!-- Bootstraps Java Scipts Links -->
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+    <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
 </head>
+<style type="text/css">
+	.logo img{
+    width:80%;
+    height:120px;
+  }
+</style>
 <body>
 	<center>
+		<table width="100%">
+    <tr>
+    <td align="center" width="100%">
+      <div class = "logo">
+      <img src = "{{url_for('static',filename = 'images/unnamed.png')}}"></div>
+    </td>
+  </tr>
+  <tr>
+    <td align="center" width="50%" height="50px;" colspan="4">
+    </td>
+    <td  align="center" width="50%" colspan="4">
+    </td>
+  </tr>
+  <tr><td colspan="8" align="center" width="100%">
+    <ul class="nav justify-content-center">
+    <ul class="nav nav-pills">
+   <li class="nav-item">
+    <a class="nav-link" href="/" style=" color: black;">Home</a>
+  </li>
+  <li class="nav-item">
+    <a class="nav-link" href="/checkmarks" style=" color: black;">Mid Marks</a>
+  </li>
+  <li class="nav-item">
+    <button type="button" class="btn btn-primary">
+               <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-graph-up" viewBox="0 0 16 16">
+  <path fill-rule="evenodd" d="M0 0h1v15h15v1H0V0zm10 3.5a.5.5 0 0 1 .5-.5h4a.5.5 0 0 1 .5.5v4a.5.5 0 0 1-1 0V4.9l-3.613 4.417a.5.5 0 0 1-.74.037L7.06 6.767l-3.656 5.027a.5.5 0 0 1-.808-.588l4-5.5a.5.5 0 0 1 .758-.06l2.609 2.61L13.445 4H10.5a.5.5 0 0 1-.5-.5z"/>
+</svg>
+                <a href = "/dashboard" style="color: white;text-decoration: none;">Dashboard</a>
+              </button>
+  </li>
+  
+</ul></ul>
+  </td></tr>
+  <tr><td height="20px;"></td></tr>
 <form action="/fee" method = 'POST'>
-		<input type="hidden" name="regno" value="{{regno}}">
+<tr><td align="center">
+	<input type="hidden" name="regno" value="{{regno}}">
 	<select name = 'sem'>
 		<option>1st year</option>
 		<option>2nd year</option>
 		<option>3rd year</option>
 		<option>4th year</option>
 
-	</select>
-	<input type="submit" name="submit">
-</form></center>
+	</select></td></tr>
+	<tr><td height="20px;"></td></tr>
+	<tr><td align="center" >
+	<input type="submit" name="submit"></td></tr>
+</form></center></table>
 </body>
 </html>
