--- a/templates/test1.html
+++ b/templates/test1.html
@@ -1,97 +1,37 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Radio Buttons</title>
+	<title>Fees Details</title>
 	<style type="text/css">
-		@import url('https://fonts.googleapis.com/css2?family=Lobster&display=swap');
-body > #bg{
-	height: 100%;
-	width: 100%;
-	background: #37517E;
-	clip-path: polygon(0 0, 100% 0%, 100% 46%, 0 79%);
-
-	position: absolute;
-	z-index: -1;
-	box-shadow: 0px 0px 0.8px 0 rgba(0, 0, 0, 0.4), 0 6px 20px 0 rgba(0, 0, 0, 0.9);
-}
-	.logo img{
-		width:80%;
-		height:120px;
-
-}
-
-
- .heading{
-		font-family: 'Lobster', cursive;
-		
-		  color:white;
-		  
-		   
-		    
-	}
-	
-</style>
-<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
-	<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.4/dist/umd/popper.min.js" integrity="sha384-q2kxQ16AaE6UbzuKqyBE9/u/KzioAlnx2maXQHiDX9d4/zp8Ok3f+M7DPm+Ib6IU" crossorigin="anonymous"></script>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.min.js" integrity="sha384-pQQkAEnwaBkjpqZ8RU1fF1AKtTcHJwFl3pblpTlHXybJjHpMYo79HY3hIi4NKxyj" crossorigin="anonymous"></script>
+		table{
+			border-collapse: collapse;
+		}
+	</style>
 </head>
-	<body><div id = "bg"></div>
-<table width="100%" >
-	<tr>
-		<td align="center" width="100%" colspan = "2">
-			<div class = "logo">
-			<img src = "{{url_for('static',filename = 'images/unnamed.png')}}"></div>
-		</td>
-	</tr>
-	<tr>
-		<td align="center" width="100%"  colspan = "2">
-			<div class = "heading">
-			<h1>Welcome to the Virtual lab of <br>AKRG CET</h1></div>
-		</td>
-	</tr>
-	<tr>
-		<td align="center" width="50%" height="50px;">
-		</td>
-		<td  align="center" width="50%">
-		</td>
-	</tr>
-	<tr><td colspan="2" align="center" width="100%">
-		<ul class="nav justify-content-center">
-		<ul class="nav nav-pills">
-   <li class="nav-item">
-    <a class="nav-link" href="/" style="color: white;text-decoration: none;">Home</a>
-  </li>
-  <li class="nav-item">
-    <a class="nav-link" href="/firebase" style="color: white;text-decoration: none;">Mid Marks</a>
-  </li>
-  <li class="nav-item">
-    <button type="button" class="btn btn-primary" style="box-shadow: -8px -8px 8px 0 rgba(0, 0, 0, 0.4), 0 6px 20px 0 rgba(0, 0, 0, 0.19); border: 0px solid black; background-color: #0D6EFD; color: white;border-radius: 50px; ">
-               <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-graph-up" viewBox="0 0 16 16">
-  <path fill-rule="evenodd" d="M0 0h1v15h15v1H0V0zm10 3.5a.5.5 0 0 1 .5-.5h4a.5.5 0 0 1 .5.5v4a.5.5 0 0 1-1 0V4.9l-3.613 4.417a.5.5 0 0 1-.74.037L7.06 6.767l-3.656 5.027a.5.5 0 0 1-.808-.588l4-5.5a.5.5 0 0 1 .758-.06l2.609 2.61L13.445 4H10.5a.5.5 0 0 1-.5-.5z"/>
-</svg>
-                <a href = "/dashboard" style="color: white;text-decoration: none;">DashBoard</a>
-              </button>
-  </li>
-  
-</ul></ul>
-	</td></tr>
-	<tr>
-		<td align="center" width="50%" height="50px;">
-		</td>
-		<td  align="center" width="50%">
-		</td>
-	</tr>
-	<tr><td width="50%" align = "center">
-<button type="button" class="btn btn-primary" style="width: 100px;margin: 30px;box-shadow: -8px -8px 8px 0 rgba(0, 0, 0, 0.4), 0 6px 20px 0 rgba(0, 0, 0, 0.19); border: 0px solid black; background-color: #0D6EFD; color: white;border-radius: 50px; "onclick="document.location='/test1'">Civil</button></td>
-<td width="50%"  align = "center">
-	
-<button type="button" class="btn btn-primary" style="width: 100px;margin: 30px;box-shadow: -8px -8px 8px 0 rgba(0, 0, 0, 0.4), 0 6px 20px 0 rgba(0, 0, 0, 0.19); border: 0px solid black; background-color: #0D6EFD; color: white;border-radius: 50px; "onclick="document.location='/test1'">Mech</button></td></tr>
-	<tr><td width="50%" align = "center">
+<body>
+	<table width = "100%" border="2px solid black">
 		
-<button type="button" class="btn btn-primary" style="width: 100px;margin: 30px;box-shadow: -8px -8px 8px 0 rgba(0, 0, 0, 0.4), 0 6px 20px 0 rgba(0, 0, 0, 0.19); border: 0px solid black; background-color: #0D6EFD; color: white;border-radius: 50px; "onclick="document.location='/sub'">CSE</button></td>
-<td width="50%" align = "center">
-	
-<button type="button" class="btn btn-primary" style="width: 100px;margin: 30px;box-shadow: -8px -8px 8px 0 rgba(0, 0, 0, 0.4), 0 6px 20px 0 rgba(0, 0, 0, 0.19); border: 0px solid black; background-color: #0D6EFD; color: white;border-radius: 50px; "onclick="document.location='/test1'">Ece</button></td></tr>
-</table>
+<tr><td colspan="2" align="center">
+	HallTicket No: {{reg}}<br>
+	Year: {{sem}}
+</td></tr>
+{% for fees in fee.each()%}
+{% for i,j in fees.val().items() %}
+<tr><td align="center" width="50%">{{i}}</td>
+
+<td align="center">
+{% if j == "paid"%}
+<h4 style="color:green;">{{j}}</h4>
+{% elif j == "not paid" %}
+<h4 style="color: red; ">{{j}}</h4>
+{% else %}
+<p style="color: black; ">{{j}}</p>
+</td>
+</tr>
+{% endif %}
+
+{% endfor %}
+
+{% endfor %}</table>
 </body>
 </html>
