--- a/templates/ress.html
+++ b/templates/ress.html
@@ -4,6 +4,14 @@
 	<title>
 		Result Page
 	</title>
+	<link rel="stylesheet" href="https://cdn.jsdelivr.net/chartist.js/latest/chartist.min.css">
+    <script src="https://cdn.jsdelivr.net/chartist.js/latest/chartist.min.js"></script>
+
+    <!-- Bootstraps Java Scipts Links -->
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+    <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
 	<style type="text/css">
 		table{
 			border-collapse: collapse;
@@ -12,10 +20,46 @@
 </head>
 <body>
 	<center>
-	
+	<table width="100%">
+	<tr><td height="30px;"></td></tr>
+	<tr>
+		<td colspan  = "4" align="center" width="100%">
+			<div class = "logo">
+			<img src = "{{url_for('static',filename = 'images/unnamed.png')}}" style="width: 80%;"></div>
+		</td>
+	</tr>
+	<tr><td height="30px;" colspan="4"></td></tr>
+		<tr><td  align="center" width="100%" colspan="4">
+		<ul class="nav justify-content-center">
+		<ul class="nav nav-pills">
+			 <li class="nav-item">
+    <a class="nav-link" href="/" style="color: black;">Home</a>
+  </li>
+  <li class="nav-item">
+  	<button type="button" class="btn btn-primary" style="box-shadow: -8px -8px 8px 0 rgba(0, 0, 0, 0.4), 0 6px 20px 0 rgba(0, 0, 0, 0.19); border: 0px solid black; background-color: #0D6EFD; color: white;border-radius: 50px; ">
+                <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-house-fill" viewBox="0 0 16 16">
+  <path fill-rule="evenodd" d="M8 3.293l6 6V13.5a1.5 1.5 0 0 1-1.5 1.5h-9A1.5 1.5 0 0 1 2 13.5V9.293l6-6zm5-.793V6l-2-2V2.5a.5.5 0 0 1 .5-.5h1a.5.5 0 0 1 .5.5z"></path>
+  <path fill-rule="evenodd" d="M7.293 1.5a1 1 0 0 1 1.414 0l6.647 6.646a.5.5 0 0 1-.708.708L8 2.207 1.354 8.854a.5.5 0 1 1-.708-.708L7.293 1.5z"></path>
+</svg>
+                <a href = "/checkmarks" style="color: white;text-decoration: none;">Mid Marks</a>
+              </button>
+  </li>
+
+  <li class="nav-item">
+    <a class="nav-link" href="/dashboard" style="color: black;">Dashboard</a>
+  </li>
+   <li class="nav-item">
+    <a class="nav-link" href="/logout" style="color: black;">{{btn}}</a>
+  </li>
+</ul></ul>
+	</td></tr>
+<tr><td height="20px;"></td></tr>
+</table>
+	<table width="100%" border="2px solid black">
+
 {% if res2 == "No Data Found"%}
-<h4>Reg.No: {{reg}}</h4>
-	<h4>Sem: {{ear}}</h4>
+<h4 align="center">Reg.No: {{reg}}</h4>
+	<h4 align="center">Sem: {{ear}}</h4>
 <h1 style="color:green;">Mid-I</h1>
 
 	{% for task in res1.each() %}
@@ -28,10 +72,10 @@
 <h4>No Data Found</h4>
 {% endfor %}</center>
 {% else %}
-	<table width="100%" border="2px solid black">
+
 		<tr><td colspan="4">
-			<h4>Reg.No: {{reg}}</h4><br>
-			<h4>Sem: {{ear}}</h4>
+			<h4 align="center">Reg.No: {{reg}}</h4><br>
+			<h4 align="center">Sem: {{ear}}</h4>
 		</td></tr>
 <tr>
 	<td align="center" style="background-color:#white;color:black;" colspan="2">
@@ -71,7 +115,7 @@
 <td align="center" width="25%" style="background-color:#white;color:black;" >
 <h3>Result</h3>
 {% for i,j in ft.items() %}
-{% if j >= 10.0 %}
+{% if j >= 15.0 %}
 {{i}} : <img src= "{{url_for('static',filename = 'images/gt.png')}}" width="20px" height="20px"><br>
 {% else %}
 {{i}} : <img src = "{{url_for('static',filename = 'images/ri.png')}}" width="20px" height="20px"><br>
