--- a/templates/checkmarks.html
+++ b/templates/checkmarks.html
@@ -5,11 +5,60 @@
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
 	<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.4/dist/umd/popper.min.js" integrity="sha384-q2kxQ16AaE6UbzuKqyBE9/u/KzioAlnx2maXQHiDX9d4/zp8Ok3f+M7DPm+Ib6IU" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.min.js" integrity="sha384-pQQkAEnwaBkjpqZ8RU1fF1AKtTcHJwFl3pblpTlHXybJjHpMYo79HY3hIi4NKxyj" crossorigin="anonymous"></script>
+<style type="text/css">
+
+body > #bg{
+  height: 100%;
+  width: 100%;
+  background: #37517E;
+    clip-path: polygon(100% 0, 100% 23%, 0 76%, 0 0);
+
+  position: absolute;
+  z-index: -1;
+}
+.logo img{
+    width:80%;
+    height:120px;
+  }
+</style>
 </head>
 <body>
+<div id = "bg"></div>
+	<table width="100%">
 <form action = "/checking" method = "POST">
-	<table width="100%" style="margin-top: 100px;">
-		<tr><td align="center">
+	<tr><td height="30px;"></td></tr>
+	<tr>
+		<td colspan  = "2" align="center" width="100%">
+			<div class = "logo">
+			<img src = "{{url_for('static',filename = 'images/unnamed.png')}}" style="width: 80%;"></div>
+		</td>
+	</tr>
+	<tr><td height="30px;"></td></tr>
+		<tr><td  align="center" width="100%">
+		<ul class="nav justify-content-center">
+		<ul class="nav nav-pills">
+			 <li class="nav-item">
+    <a class="nav-link" href="/" style="color: white;">Home</a>
+  </li>
+  <li class="nav-item">
+  	<button type="button" class="btn btn-primary" style="box-shadow: -8px -8px 8px 0 rgba(0, 0, 0, 0.4), 0 6px 20px 0 rgba(0, 0, 0, 0.19); border: 0px solid black; background-color: #0D6EFD; color: white;border-radius: 50px; ">
+                <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-house-fill" viewBox="0 0 16 16">
+  <path fill-rule="evenodd" d="M8 3.293l6 6V13.5a1.5 1.5 0 0 1-1.5 1.5h-9A1.5 1.5 0 0 1 2 13.5V9.293l6-6zm5-.793V6l-2-2V2.5a.5.5 0 0 1 .5-.5h1a.5.5 0 0 1 .5.5z"></path>
+  <path fill-rule="evenodd" d="M7.293 1.5a1 1 0 0 1 1.414 0l6.647 6.646a.5.5 0 0 1-.708.708L8 2.207 1.354 8.854a.5.5 0 1 1-.708-.708L7.293 1.5z"></path>
+</svg>
+                <a href = "/checkmarks" style="color: white;text-decoration: none;">Mid Marks</a>
+              </button>
+  </li>
+
+  <li class="nav-item">
+    <a class="nav-link" href="/dashboard" style="color: white;">Dashboard</a>
+  </li>
+   <li class="nav-item">
+    <a class="nav-link" href="/logout" style="color: white;">{{btn}}</a>
+  </li>
+</ul></ul>
+	</td></tr>
+<tr><td height="20px;"></td></tr>
 	<tr><td align = "center">
 
 	<select name = "ear">
@@ -22,8 +71,9 @@
 		<option>4-1</option>
 		<option>4-2</option>
 	</select></td></tr>
+	<tr><td height="20px;"></td></tr>
 	<tr><td align="center">
-<button class = 'btn btn-primary' style="width: 200px; box-shadow: -8px -8px 8px 0 rgba(0, 0, 0, 0.4), 0 6px 20px 0 rgba(0, 0, 0, 0.19); border: 0px solid black; background-color: #FFE200; color: #031458; height: 30px; margin:30px;">Submit</button>
+<button class = 'btn btn-primary' style="box-shadow: -8px -8px 8px 0 rgba(0, 0, 0, 0.4), 0 6px 20px 0 rgba(0, 0, 0, 0.19); border: 0px solid black; background-color: #0D6EFD; color: white;border-radius: 50px;">Submit</button>
 
 </td></tr></table>
 </form>
