--- a/templates/c.html
+++ b/templates/c.html
@@ -1,19 +1,17 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>CPP</title>
+	<title>c page</title>
 </head>
 <style type="text/css">
-	body > #bg{
-	height: 100%;
-	width: 100%;
-	background: #37517E;
-	clip-path: polygon(0 0, 100% 0%, 100% 46%, 0 79%);
-
-	position: absolute;
-	z-index: -1;
-	box-shadow: 0px 0px 0.8px 0 rgba(0, 0, 0, 0.4), 0 6px 20px 0 rgba(0, 0, 0, 0.9);
-}
+	body{
+		background-color: #1E90FF;
+		overflow-x: hidden;
+	}
+	.logo img{
+		width:80%;
+		height:120px;
+	}
 
 @media screen and (max-width: 1060px) {
 .logo img{
@@ -97,7 +95,7 @@
 }
 }
 </style>
-	<body><div id = "bg"></div>
+<body>
 <table width="100%">
 	<tr>
 
@@ -115,16 +113,15 @@
 <tr>
 		<td align="center" width="50%">
 			<div class = "image1">
-			<a href = "/c11" target="_blank"><img src = "{{url_for('static',filename = 'images/lb.png')}}" height="300px" width="50%;"></a></div>
+			<a href = "/c11" target="_blank"><img src = "{{url_for('static',filename = 'images/lb.png')}}" height="300px" width="300px;"></a></div>
 		</td>
 		<td  align="center" width="50%">
 			<div class = "image2">
-			<a href = "https://www.programiz.com/c-programming/online-compiler/" target="_blank"><img src = "{{url_for('static',filename = 'images/sc.png')}}" height="300px" width="50%;" ></a></div>
+			<a href = "https://www.programiz.com/c-programming/online-compiler/" target="_blank"><img src = "{{url_for('static',filename = 'images/sc.png')}}" height="300px" width="300px;" ></a></div>
 		</td>
 	</tr>
-<tr><td colspan = "2" align = "center">
-<h1 style="color: black;text-align: center;">Dont Forget to Take a Screenshot after you completed your assignment</h1>
-<h2 style="color: black;text-align: center;">Screenshot's Must contains your code and the output!!</h2></td></tr>
-	</table>
+</table>
+<h1 style="color: white;text-align: center;">Dont Forget to Take a Screenshot after you completed your assignment</h1>
+<h2 style="color: white;text-align: center;">Screenshot's Must contains your code and the output!!</h2>
 </body>
 </html>
